--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run generate-sitemap",
+    "build:only": "tsc && vite build",
+    "generate-sitemap": "node scripts/generate-sitemap.js",
     "preview": "vite preview"
   },
   "devDependencies": {
